Corrigido e feito melhorias
